<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
    <string name="app_name">Meal Planner</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_shoppinglist">Shopping list</string>
    <string name="menu_addmealtoday">Add a meal to a day</string>
    <string name="new_recipe">New recipe</string>
    <string name="all_fields">All fields must be filled</string>

    <!-- New recipe fragment -->
    <string name="new_rec_name">Lovely dish name?</string>
    <string name="new_rec_desc">You got a creative description?</string>
    <string name="new_rec_meat">What\'s the main ingredient?</string>
    <string name="new_rec_acc">Any accessories?</string>
    <string name="new_rec_veg">Some healthy vegetables?</string>
    <string name="new_rec_date">When will you make the recipe?</string>
    <string name="new_rec_drink">Something to drink?</string>

    <!-- Add meal to date fragment -->
    <string name="select_meal">What are you going to eat?</string>
    <string name="select_date">When are you going to eat?</string>
    <string name="no_recipe">Can\'t find the recipe you\'re looking for?\nMaybe
        you haven\'t created it yet, do that now!</string>

    <!-- Shopping list fragment -->
    <string name="new_buy_item">Add item to buy</string>

    <!-- Add item to buy fragment -->
    <string name="buy_product">What to you have to buy?</string>
    <string name="buy_date">When do you need this?</string>
</resources>
