<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.da401a.mealplanner.NewRecipeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_name"
            android:id="@+id/editTextNewRecName"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <EditText
            android:text="blabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_desc"
            android:id="@+id/editTextNewRecDesc"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <EditText
            android:text="blabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_meat"
            android:id="@+id/editTextNewRecMeat"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <EditText
            android:text="blabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_acc"
            android:id="@+id/editTextNewRecAcc"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <EditText
            android:text="blabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_veg"
            android:id="@+id/editTextNewRecVeg"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <EditText
            android:text="blabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rec_drink"
            android:id="@+id/editTextNewRecDrink"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Done"
            android:id="@+id/buttonNewRecipeInput"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</ScrollView>

